--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ moviepy==0.2.3.5
 numpy==1.15.4
 opencv-python==3.4.4.19
 protobuf==3.6.1
-PyYAML==3.13
+PyYAML==4.2b4
 scipy==1.2.0
 six==1.11.0
 tabulate==0.8.2
